# rust_rest_demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs
