[package]
name = "stock_quote_generator_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.33"